# tribonacci

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yaml
helm/tribonacci/: Chart.yaml  values.yaml
helm/tribonacci/templates/: deployment.yaml  ingress.yaml  service.yaml
src/: fibonacci.rs  lib.rs  main.rs  routes.rs  startup.rs
tests/: api.rs
