[package]
name = "tribonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"

[dev-dependencies]
actix-rt = "2.4.0"
reqwest = "0.11.6"
test-case = "1.2.1"
tokio = "1.13.1"

[profile.release]
lto = true
